# ssl_pixpro

./: .dockerignore  .gitignore  Dockerfile  README.md  gitignore  main.py  pix_pro.ipynb  pyproject.toml  requirements.txt  run.sh
configs/: config.yaml  not_config
pipelines/: train_pipeline.py
src/: PixProLightning.py  augmentations.py  clustering_val.py  datamodule.py  dataset.py  losses.py  modules.py  pixpro.py  ppm.py  train.py
utils/: augmentations.py  compute_mean_std.py  custom_callbacks.py  reg_parameters.py  vizualize_clustering.py
