[project]
name = "ssl-pixpro"
version = "0.1.0"
description = ""
authors = [
    {name = "dalekseenko",email = "dalekseenko@kitt.systems"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "timm (>=1.0.15,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
clearml = "^1.17.1"
omegaconf = "^2.3.0"
tensorboard = "^2.19.0"
pytorch-lightning = "^2.5.0.post0"
scikit-learn = "^1.6.1"
clearml-agent = "^1.9.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
